syntax = "proto2";
package messages;

message EchoMessage {
  optional string server_name = 1;
  optional int64 utc_time = 2;
  optional string msg = 3;
}

service EchoService {
  rpc Hello (EchoMessage) returns (EchoMessage) {}
  rpc WhatsUp (stream EchoMessage) returns (stream EchoMessage) {}
}
