syntax = "proto2";
package names;

message NameRequest {
  optional string server_name = 1;
  optional int64 utc_time = 2;
}

message NameResponse {
  optional string server_name = 1;
  optional int64 utc_time = 2;
  optional string person = 3;
  optional string quality = 4;
}

service GreatNamesService {
  rpc Get (NameRequest) returns (NameResponse) {}
}
